# Blocket

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
cmake/: FindGLM.cmake  FindSDL2.cmake
res/shaders/: viewVertex.fs  viewVertex.vs
src/: basicshader.cpp  basicshader.h  block.cpp  block.h  chunk.cpp  chunk.h  entity.cpp  entity.h  game.cpp  game.h  gamerenderer.cpp  gamerenderer.h  hud.cpp  hud.h  input.cpp  input.h  main.cpp  player.cpp  player.h  shader.cpp  shader.h  util.cpp  vertex.cpp  vertex.h  window.cpp  window.h  world.cpp  world.h
src/block/: block.cpp  block.h
src/util/: aabb.cpp  aabb.h  cside.cpp  cside.h  geom.cpp  geom.h  spritesheet.cpp  spritesheet.h  util.cpp  util.h  vertex.cpp  vertex.h
src/world/: chunk.cpp  chunk.h  world.cpp  world.h
